# nova-eddsa

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  genlog.sh  genlog_all.sh
examples/: verify.rs
logs/: output_10.txt  output_100.txt  output_128.txt  output_150.txt  output_16.txt  output_2.txt  output_200.txt  output_32.txt  output_50.txt  output_64.txt  output_8.txt
src/: circuit.rs  ed25519.rs  lib.rs
