[package]
name = "nova-eddsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellpepper-core = { version="0.3.0", default-features = false }
bellpepper = { version="0.3.0", default-features = false }
bellpepper-ed25519 = { git = "https://github.com/varunthakore/bellpepper-gadgets.git" }
ff = "0.13.0"
num-bigint = "0.4.4"
rand = "0.8"